Bug 435786 - Monitor stays black after plugging in
Summary: Monitor stays black after plugging in
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-15 21:03 UTC by Nicolas Fella
Modified: 2021-04-22 12:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
wayland-session.log (486.80 KB, text/x-log)
2021-04-15 21:09 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2021-04-15 21:03:29 UTC
STEPS TO REPRODUCE
1. Boot Laptop without monitor attached and log in
2. Plugin external HDMI monitor in

OBSERVED RESULT
Screen flashes, Plasma and KScreen recognize the monitor but the monitor itself is black

EXPECTED RESULT
Monitor shows things

SOFTWARE/OS VERSIONS
Wayland
KDE stuff from master, Qt from 5.15 branch (original, not KDE)
Comment 1 Nicolas Fella 2021-04-15 21:09:32 UTC
Created attachment 137643 [details]
wayland-session.log
Comment 2 Nicolas Fella 2021-04-15 21:12:17 UTC
The same laptop + monitor combination has worked in the past.

The log has
kwin_wayland_drm: Received hot plug event for monitored drm device
kwin_wayland_drm: Creating connector 103
kwin_wayland_drm: Found property DPMS with value 3
kwin_wayland_drm: Found property non-desktop with value 0
kwin_wayland_drm: Found property CRTC_ID with value 0
kwin_wayland_drm: Could not find property "EDID"
kwin_wayland_drm: Could not find edid for connector DrmObject(103, gpu: KWin::DrmGpu(0x55ec1e7093b0))
kwin_wayland_drm: Creating connector 113
kwin_wayland_drm: Found property DPMS with value 3
kwin_wayland_drm: Found property non-desktop with value 0
kwin_wayland_drm: Found property CRTC_ID with value 0
kwin_wayland_drm: Could not find property "EDID"
kwin_wayland_drm: Could not find edid for connector DrmObject(113, gpu: KWin::DrmGpu(0x55ec1e7093b0))
kwin_wayland_drm: Creating connector 119
kwin_wayland_drm: Found property DPMS with value 3
kwin_wayland_drm: Found property non-desktop with value 0
kwin_wayland_drm: Found property CRTC_ID with value 0
kwin_wayland_drm: Could not find property "EDID"
kwin_wayland_drm: Could not find edid for connector DrmObject(119, gpu: KWin::DrmGpu(0x55ec1e7093b0))
kwin_wayland_drm: Creating connector 125
kwin_wayland_drm: Found property EDID with value 133
kwin_wayland_drm: Found property DPMS with value 3
kwin_wayland_drm: Found property non-desktop with value 0
kwin_wayland_drm: Found property CRTC_ID with value 0
kwin_wayland_drm: For new output use mode  3840x2160 3840 2160
kwin_wayland_drm: Found new output with uuid QUuid("{2efb8d92-d0e1-5911-9666-180351517e96}") on gpu "/dev/dri/card0"
kwin_wayland_drm: Reading output configuration for [ "55da3a2c87" ] [ QUuid("{bd455426-91b5-5aa4-b78c-9e21c3c810ab}") ]
kwin_wayland_drm: Reading output configuration for [ "55da3a2c87" ] [ QUuid("{2efb8d92-d0e1-5911-9666-180351517e96}") ]
kwin_core: Provided presentation timestamp is invalid: 679366 (current: 679370)
kwin_wayland_drm: Atomic request failed to commit:  Invalid argument
kwin_wayland_drm: Atomic test commit failed. Aborting present.
kwin_wayland_drm: Atomic request failed to commit:  Invalid argument
kwin_wayland_drm: Atomic test commit failed. Aborting present.
kwin_core: Platform::requestOutputsChange enabling KWaylandServer::OutputChangeSet(0x55ec1fa53bd0) QUuid("{2efb8d92-d0e1-5911-9666-180351517e96}") false true
kwin_core: Apply changes to the Wayland output.
kwin_core: Server setting position:  QPoint(0,0)
kwin_core: Setting scale: 2
kwin_core: Platform::requestOutputsChange enabling KWaylandServer::OutputChangeSet(0x55ec1fa53bb0) QUuid("{bd455426-91b5-5aa4-b78c-9e21c3c810ab}") false true
kwin_core: Apply changes to the Wayland output.
kwin_core: Server setting position:  QPoint(1,1080)
kwin_core: Adjusted client area would exclude a complete screen, ignore
kwin_wayland_drm: Atomic request failed to commit:  Invalid argument
kwin_wayland_drm: Atomic test commit failed. Aborting present.
kwin_wayland_drm: Atomic request failed to commit:  Invalid argument
kwin_wayland_drm: Atomic test commit failed. Aborting present.
kwin_wayland_drm: Atomic request failed to commit:  Invalid argument
kwin_wayland_drm: Atomic test commit failed. Aborting present.


Followed by a lot of

kwin_wayland_drm: Atomic request failed to commit:  Invalid argument
kwin_wayland_drm: Atomic test commit failed. Aborting present.
Comment 3 Nate Graham 2021-04-16 18:16:02 UTC
Same as Bug 434683?
Comment 4 Nicolas Fella 2021-04-20 15:38:37 UTC
(In reply to Nate Graham from comment #3)
> Same as Bug 434683?

Not sure. For me the monitor knows it's connected (there's no "No signal" message).

It still happens with commit 700028b37d76e763b312c3817989826162f9c6fd

kscreen-doctor -o says

Output: 1 DO NOT USE - AUO eDP-1-unknown enabled connected  Panel Modes: 0:1920x1080@60*! Geometry: 1,1080 1920x1080 Scale: 1 Rotation: 1 Overscan: 0 
Output: 2 Dell Inc. DELL P2415Q/D8VXF0150C7B enabled connected primary Unknown Modes: 0:3840x2160@30*! 1:3840x2160@30 10:1920x1080@60 11:1920x1080@60 12:1920x1080@60 13:1920x1080@60 14:1920x1080@50 15:1920x1080@50 16:1920x1080@50 17:1920x1080@30 18:1920x1080@30 19:1920x1080@25 2:3840x2160@30 20:1920x1080@24 21:1920x1080@24 22:1600x1200@60 23:1600x900@60 24:1280x1024@75 25:1280x1024@60 26:1152x864@75 27:1280x720@60 28:1280x720@60 29:1280x720@50 3:3840x2160@30 30:1024x768@75 31:1024x768@60 32:800x600@75 33:800x600@60 34:720x576@50 35:720x576@50 36:720x576@50 37:720x576@50 38:720x480@60 39:720x480@60 4:3840x2160@25 40:720x480@60 41:720x480@60 42:720x480@60 43:720x480@60 44:720x480@60 45:720x480@60 46:640x480@75 47:640x480@60 48:640x480@60 49:640x480@60 5:3840x2160@24 50:720x400@70 6:3840x2160@24 7:2560x1440@60 8:1920x1080@60 9:1920x1080@60 Geometry: 0,0 1920x1080 Scale: 2 Rotation: 1 Overscan: 0 primary
Comment 5 Zamundaaa 2021-04-20 16:20:58 UTC
Hotplugging in general is broken on master atm. https://invent.kde.org/plasma/kwin/-/merge_requests/843 should fix it
Comment 6 Vlad Zahorodnii 2021-04-21 08:29:13 UTC
The relevant change was reverted. Closing the bug report.
Comment 7 Zamundaaa 2021-04-21 09:05:31 UTC
What change are you referring to? The problem here was not the DrmPipeline patch.
https://invent.kde.org/plasma/kwin/-/merge_requests/815 causes the MODE_ID property to be missing if you hotplug anything and thus all atomic requests to fail. It's not fixed yet.
Comment 8 Zamundaaa 2021-04-22 12:41:13 UTC
Git commit 49c650eed2ad00bcd5a4c180627027957ed3ff2e by Xaver Hugl.
Committed on 22/04/2021 at 12:40.
Pushed by zamundaaa into branch 'master'.

platforms/drm: don't ignore blob properties without valid blobs

Instead of deleting all blob properties without a valid
blob check for the blob existing before using it. This is
necessary because some properties are needed even without
currently valid blobs.

M  +0    -3    src/plugins/platforms/drm/drm_object.cpp
M  +3    -2    src/plugins/platforms/drm/drm_object_connector.cpp

https://invent.kde.org/plasma/kwin/commit/49c650eed2ad00bcd5a4c180627027957ed3ff2e